<resources>
    <string name="app_name">Chat Realtime</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_back">SimpleChat</string>
    <string name="email_address">Nhập email</string>
    <string name="password">Mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="create_new_account">Đăng kí tài khoản</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="add_image">chọn avatar</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="name">Họ tên</string>
    <string name="sign_up">Tạo tài khoản mới</string>
    <string name="todo">TODO</string>
    <string name="select_user">Danh sách bạn bè</string>
    <string name="hint_message">Message</string>
    <string name="online">Đang xem</string>
    <string name="already_have_an_account">Bạn đã có tài khoản?</string>
    <string name="message_dialog_logout">Đăng xuất tài khoản khỏi ứng dụng của bạn?</string>
    <string name="text_negative_logout">ĐĂNG XUẤT</string>
    <string name="text_positive_cancel">HỦY</string>
    <string name="text_search">Tìm kiếm</string>
    <string name="text_title_home">Trò chuyện</string>
    <string name="text_logout">Đăng xuất</string>
    <string name="email">Email</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="profile">Hồ sơ</string>
    <string name="title_activity_main_navigation">MainNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pick_image">Chọn ảnh</string>
    <string name="drop_image">Gỡ ảnh</string>
    <string name="setting">Cài đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Tính năng chưa phát triển</string>
    <string name="label_message">Trò chuyện</string>
    <string name="label_group_chat">Nhóm</string>
    <string name="label_friends">Bạn bè</string>
    <string name="chat_bot">AI</string>
    <string name="chat_ai">Chat Bot</string>
    <string name="nav_header">nav header</string>
    <string name="vu_anh_tuan">VU ANH TUAN</string>
    <string name="tuananhvund0321_gmail_com">Contact: tuananhvund0321@gmail.com</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="text_additional">bổ sung</string>
    <string name="enter_email">Nhập email</string>
    <string name="scan_qr">  Quét QR</string>
    <string name="text_add_friend">Thêm bạn</string>
    <string name="text_invitation">Lời mời kết bạn</string>
    <string name="text_unfriend">Xóa kết bạn</string>
    <string name="text_title_unfriend">Bạn có muốn xóa kết bạn?</string>
    <string name="n">N</string>
    <string name="text_setting">Cài đặt</string>
    <string name="copyright">Copyright VAT</string>
    <string name="channel_name">channelName</string>
    <string name="channel_description">channelDescription</string>
</resources>