<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/logo_chat1"
            android:clickable="false"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLength="254"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/main_border"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_input"
            android:drawableEnd="@drawable/ic_display_password"
            android:fontFamily="@font/roboto_regular"
            android:fontFeatureSettings=""
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/main_border"
            android:textSize="@dimen/_13ssp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:backgroundTint="@color/main_color_blue"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                app:cornerRadius="@dimen/_30sdp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/ani_loading2" />
        </FrameLayout>


        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/forgot_password"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/main_color_blue"
            android:textSize="@dimen/_15ssp"
            app:cornerRadius="@dimen/_15sdp"
            app:strokeColor="@color/main_color_blue"
            app:strokeWidth="1dp" />
    </LinearLayout>

</ScrollView>