<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddFriendActivity">
    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/main_color_blue"
            android:text="@string/text_add_friend"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:textColor="@color/white"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back_round"
            android:background="@color/main_color_blue"
            android:tint="@color/white"
            android:contentDescription="@string/welcome_back"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionBar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageQR"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/main_color_blue" />
            <RelativeLayout
                android:id="@+id/enterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageQR"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true">
                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:minHeight="50dp"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_address"
                    android:background="@drawable/background_input"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_toStartOf="@id/buttonRequest" />
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/buttonRequest"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/background_icon"
                    android:src="@drawable/round_arrow_forward_24"
                    android:contentDescription="@string/email"/>
            </RelativeLayout>
            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/secondary_text"
                android:layout_below="@id/enterEmail"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/textViewInvitation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/round_insert_invitation_24"
                android:minHeight="60dp"
                android:layout_below="@id/line1"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/text_invitation"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/textViewScanQR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/baseline_qr_code_scanner_24"
                android:minHeight="60dp"
                android:layout_below="@id/textViewInvitation"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/scan_qr"
                android:gravity="center_vertical"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>