<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="135dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/background_input"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:fontFamily="@font/quicksand_semibold"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/message_dialog_logout"
        android:textSize="@dimen/_13ssp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPositiveCancel"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/text_positive_cancel"
            android:textAlignment="center"
            android:textColor="@color/error"
            android:textSize="@dimen/_10ssp"
            app:cornerRadius="30dp"
            app:strokeColor="#4169c1"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNegativeLogOut"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:backgroundTint="#4169c1"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/text_negative_logout"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/_10ssp"
            android:textAlignment="center"
            android:layout_gravity="center"
            app:cornerRadius="30dp"/>
    </LinearLayout>
</LinearLayout>